[tool.poetry]
name = "byproxy"
version = "0.1.0"
description = ""
authors = [
    "uykusuz <vimevim@gmail.com>"
    ]
readme = "README.md"
license = "MIT"
packages = [
    {include = "byproxy"}
    ]
maintainers = [
    "uykusuz <vimevim@gmail.com>"
]
repository = "https://github.com/vimevim/byproxy"
keywords = ["proxy", "ip", "host", "http", "https", "socks4", "socks5"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "CHANGELOG.md"
    ]
exclude = [
    "proxies.txt",
    "Development.ipynb"
    ]

[tool.poetry.dependencies]
python = "3.8.8"
requests = "2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "5.2"
ipython = "8.5.0"
ipykernel = "6.15.1"
numpy = "1.22.3"
pandas = "1.4.2"
openpyxl = "3.0.9"
XlsxWriter = "3.0.3"

[tool.poetry.group.docs.dependencies]
pdoc3 = "0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"