[tool.poetry]
name = "byproxy"
version = "0.1.4"
description = "ByProxy is a library to generate proxy dictionaries from a list of urls and gain information about the proxies."
authors = [
    "uykusuz <vimevim@gmail.com>"
    ]
readme = "README.md"
license = "MIT"
packages = [
    {include = "byproxy"}
    ]
maintainers = [
    "uykusuz <vimevim@gmail.com>"
]
repository = "https://github.com/vimevim/byproxy"
homepage = "https://vimevim.github.io/byproxy/"
keywords = ["proxy", "ip", "host", "http", "https", "socks4", "socks5"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "CHANGELOG.md"
    ]
exclude = [
    "proxies.txt",
    "Development.ipynb"
    ]

[tool.poetry.dependencies]
python = "~3.8.8"
requests = "~2.28.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "1.7.0"
pytest = "5.2"
pdoc3 = "0.10.0"
pygount = "1.4.0"
ipython = "8.5.0"
ipykernel = "6.15.1"
pyinstaller = "4.10"
pandas = "1.4.2"
numpy = "1.22.3"
openpyxl = "3.0.9"
XlsxWriter = "3.0.3"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"